[metadata]
name = django_reflinks
version = 0.2.1
description = Referral links for Django
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/django-reflinks/
download_url = https://github.com/HearthSim/django-reflinks/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Games/Entertainment

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	Django

[options.packages.find]
exclude =
	tests
