[metadata]
name = django_reflinks
version = 0.5.1
description = Referral links for Django
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/django-reflinks/
download_url = https://github.com/HearthSim/django-reflinks/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.0
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	Django >= 3.0

[options.packages.find]
exclude =
	tests
